--- a/package.json
+++ b/package.json
@@ -5,14 +5,28 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
+    "lint": "eslint . --fix",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-navigation/bottom-tabs": "^6.5.16",
+    "@react-navigation/material-top-tabs": "^6.6.10",
+    "@react-navigation/native": "^6.1.14",
+    "@react-navigation/stack": "^6.3.25",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "react": "18.2.0",
     "react-native": "0.73.5",
-    "react-native-config": "^1.5.1"
+    "react-native-config": "^1.5.1",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-pager-view": "^6.2.3",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^15.1.0",
+    "react-native-tab-view": "^3.5.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -25,9 +39,11 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-iconfont-cli": "^2.2.4",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
