--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/stack": "^6.3.25",
     "@types/react-native-snap-carousel": "^3.8.11",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-config": "^1.5.1",
