--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-native": "0.73.5",
     "react-native-config": "^1.5.1",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-linear-animated-gradient-transition": "^0.1.6",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.2.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
