--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/material-top-tabs": "^6.6.10",
@@ -20,6 +21,8 @@
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-config": "^1.5.1",
+    "react-native-drag-sort": "^2.4.4",
+    "react-native-draggable-grid": "^2.1.8",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-linear-animated-gradient-transition": "^0.1.6",
     "react-native-linear-gradient": "^2.8.3",
@@ -29,6 +32,7 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^15.1.0",
     "react-native-tab-view": "^3.5.2",
+    "react-navigation-header-buttons": "10.0.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
